--- a/home.html
+++ b/home.html
@@ -4,6 +4,8 @@
     <head>
       <script src="./my_scr.js"></script>
         <link rel="stylesheet" href="./stylesheet.css">
+        <link rel="shortcut icon" href="./icon.png">
+        <meta property="og:title" content="Ishan"
       </head>
     <div class="navigation_panel">
       
