--- a/contacts.html
+++ b/contacts.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="./stylesheet.css">
+        <link rel="shortcut icon" href="./icon.png">
       </head>
     <div class="navigation_panel">
       
