link preview commit

--- a/home.html
+++ b/home.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ishan Srivastava</title>
     <head>
       <script src="./my_scr.js"></script>
         <link rel="stylesheet" href="./stylesheet.css">
         <link rel="shortcut icon" href="./icon.png">
-        <meta property="og:title" content="Ishan"
+        <meta property="og:title" content="Ishan">
+        <meta property="og:description" content="The Website Made By Ishan">
+        <meta property="og:image" content="./ishansrvt_text.png">
+        <meta property="og:url" content="https://ishansrvt.github.io/home.html">
       </head>
     <div class="navigation_panel">
       
