--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
       </head>
     <div class="navigation_panel">
       
-        <a href="./home.html">Home</a>
+        <a href="./index.html">Home</a>
         <a href="./projects.html">Projects</a>
         <a href="./contacts.html">Contact</a>
         <a class="active" href="./about.html">About</a>
