--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,7 @@
       </head>
     <div class="navigation_panel">
       
-        <a href="./home.html">Home</a>
+        <a href="./index.html">Home</a>
         <a href="./projects.html">Projects</a>
         <a class="active" href="./contacts.html">Contacts</a>
         <a href="./about.html">About</a>
