--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </head>
     <div class="navigation_panel">
       
-        <a class="active" href="./home.html">Home</a>
+        <a class="active" href="./index.html">Home</a>
         <a href="./projects.html">Projects</a>
         <a href="./contacts.html">Contact</a>
         <a href="./about.html">About</a>
