Meta link preview Commit

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Ishan Srivastava</title>
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="shortcut icon" href="./images/servericon.ico">
+    <link rel="shortcut icon" href="./images/icon.png">
     <meta property="og:title" content="Ishan">
-    <meta property="og:description" content="The Website Made By Ishan">
+    <meta property="og:description" content="The Website Made By Ishan 😎 The Genius">
     <meta property="og:image" content="../images/icon.png">
     <meta property="og:url" content="https://ishansrvt.github.io/home.html">
 </head>
