--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Ishan Srivastava</title>
     <link rel="stylesheet" href="../css/aboutus.css">
-    <link rel="shortcut icon" href="../images/servericon.ico">
+    <link rel="shortcut icon" href="../images/icon.png">
 </head>
     <header>
         <nav>
