--- a/html/contactus.html
+++ b/html/contactus.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Ishan Srivastava</title>
     <link rel="stylesheet" href="../css/contactus.css">
-    <link rel="shortcut icon" href="../images/servericon.ico">
+    <link rel="shortcut icon" href="../images/icon.png">
 </head>
 <br>
     <header>
