discord link fix commit

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li class="dropdown"><a href="#"><span>Instant Links</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="https://www.youtube.com/channel/UCF2P1qr-vAe6nnce22WsL2w">YouTube Channel</a></li>
-              <li><a href="https://discord.com/TmFjjeSp9k">Discord Server</a></li>
+              <li><a href="https://discord.com/invite/TmFjjeSp9k">Discord Server</a></li>
               <li><a href="https://www.instagram.com/_coding_daemon_/">Instagram</a></li>
               <li><a href="https://twitter.com/__Ishan_Srvt__">Twitter</a></li>
             </ul>
