mail fix commit

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                       <ul class="list-ico">
                         <li><span class="bi bi-geo-alt"></span> India, Ghaziabad</li>
                         <li><span class="bi bi-phone"></span>---</li>
-                        <li><span class="bi bi-envelope"></span>ishansrvt@gmail.com</li>
+                        <li><span class="bi bi-envelope"></span>ishan.srvt7@gmail.com</li>
                       </ul>
                     </div>
                     <div class="socials">
