--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">I am Ishan Srivastava</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Developer, Editor, Hacker, Student"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Student, Editor, Hacker, Developer"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
