twitter account commit

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <li><a href="https://www.youtube.com/channel/UCF2P1qr-vAe6nnce22WsL2w">YouTube Channel</a></li>
               <li><a href="https://discord.com/invite/TmFjjeSp9k">Discord Server</a></li>
               <li><a href="https://www.instagram.com/_coding_daemon_/">Instagram</a></li>
-              <li><a href="https://twitter.com/__Ishan_Srvt__">Twitter</a></li>
+              <li><a href="https://twitter.com/im__ishan">Twitter</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
