New Projects Commit

--- a/index.html
+++ b/index.html
@@ -403,6 +403,30 @@
               </div>
             </div>
           </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/img/other_proj.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/other_proj.png" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">All projects</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Programming</span> / <span class="w-date">3 Feb 2022</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="https://drive.google.com/drive/folders/1cZYROA4osZ1NUruStBocZu1Tdlqj9WSu?usp=sharing"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- End Portfolio Section -->
 
 
