image hyperlink commit

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/pico rubber ducky image.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="https://youtu.be/Kjb2NbM7tvY" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="assets/img/pico rubber ducky image.png" alt="" class="img-fluid">
                 </div>
@@ -309,7 +309,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/Automatic Irrigation System.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="https://youtu.be/eUg7odS54AY" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="assets/img/Automatic Irrigation System.jpg" alt="" class="img-fluid">
                 </div>
@@ -333,7 +333,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/RFID Barricading System.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="https://youtu.be/7uEKTP0RDAA" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="assets/img/RFID Barricading System.jpg" alt="" class="img-fluid">
                 </div>
@@ -357,7 +357,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/IoT Lights.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="https://drive.google.com/file/d/1fCnGiqH7LfRIvV8R8h_AgyHTvfMqoNqd/view?usp=sharing" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="assets/img/IoT Lights.png" alt="" class="img-fluid">
                 </div>
@@ -381,7 +381,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/AI Maze Solver.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="https://youtu.be/rBSqUfZFjA0" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="assets/img/AI Maze Solver.jpg" alt="" class="img-fluid">
                 </div>
@@ -405,7 +405,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/other_proj.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="https://drive.google.com/drive/folders/1cZYROA4osZ1NUruStBocZu1Tdlqj9WSu?usp=sharing" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="assets/img/other_proj.png" alt="" class="img-fluid">
                 </div>
