update in my info

--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
                       and I have made basic projects of it. Ans I also learnt little html css for making this website 
                     </p>
                     <p class="lead">
-                      After all that, I am a student in Class - 9th
+                      After all that, I am a student in Class - 10th 
+                      in Seth Anandram Jaipuria School Vasundhara
                       My favourite Subject is Physics
                       and AI
                     </p>
