--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                       and I have made basic projects of it. Ans I also learnt little html css for making this website 
                     </p>
                     <p class="lead">
-                      After all that, I am a student in Class - 10th 
+                      After all that, I am a student in Class - 10th - F
                       in Seth Anandram Jaipuria School Vasundhara
-                      My favourite Subject is Physics
+                      My favourite Subjects are Science
                       and AI
                     </p>
                   </div>
