about updation commit

--- a/index.html
+++ b/index.html
@@ -126,19 +126,22 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      I am a Student. Learning Programming, Hacking, Web Development
-                      Robotics, and a lot of tech stuff.
+                      I am a Student of Class: 10th - F in Seth Anandram Jaipuria School Vasundhara,
+                      I have intermediate-level knowledge in Programming, 
+                      Networking, Robotics and Website Development.
                     </p>
                     <p class="lead">
-                      My favourite thing to learn in Arduino which I use to make Robotics
-                      Projects, I have also learnt basic c++ for it. I am also able to code in Python
-                      and I have made basic projects of it. Ans I also learnt little html css for making this website 
+                      I have intermediate learning in Arduino, 
+                      a microcontroller mainly used in my Robotics projects.
+                      Regarding my understanding of Technology,
+                      I have mastered basic coding skills
+                      in C++ as well as Python.
                     </p>
                     <p class="lead">
-                      After all that, I am a student in Class - 10th - F
-                      in Seth Anandram Jaipuria School Vasundhara
-                      My favourite Subjects are Science
-                      and AI
+                      I am currently trying to develop my skills
+                      in new fields like Bash Scripting,
+                      Application Development,
+                      and Database Management Systems.
                     </p>
                   </div>
                 </div>
