--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
               <div class="service-content">
                 <h2 class="s-title">Programming</h2>
                 <p class="s-description text-center">
-                  I know How to write programmes in Programming
-                  Languages Like Python and C++
-                  And I know basic logic making and loops.
+                  I have knowledge in Programming Languages 
+                  Like Python and C++ and 
+                  intermediate logic making and loops.
                 </p>
               </div>
             </div>
