--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                         Send Me Message 
                       </h5>
                     </div>
-                    <div>
+                    <!-- <div>
                       <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
@@ -486,16 +486,16 @@
                         </div>
                       </form>
                     </div>
-                  </div>
-                  <div class="col-md-6">
+                  </div> -->
+                  <!-- <div class="col-md-6">
                     <div class="title-box-2 pt-4 pt-md-0">
                       <h5 class="title-left">
                         Get in Touch
                       </h5>
-                    </div>
+                    </div> -->
                     <div class="more-info">
                       <p class="lead">
-                        Send me a Message or check my handles below
+                        check my handles below
                       </p>
                       <ul class="list-ico">
                         <li><span class="bi bi-geo-alt"></span> India, Ghaziabad</li>
@@ -507,7 +507,7 @@
                       <ul>
                     
                         <li><a href="https://www.instagram.com/_coding_daemon_/"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
-                        <li><a href="https://twitter.com/__Ishan_Srvt__"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
+                        <li><a href="https://twitter.com/im__Ishan"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
                   
                       </ul>
                     </div>
