--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                Services
+                Knowledge
               </h3>
               <p class="subtitle-a">
                 My Understanding
@@ -192,9 +192,9 @@
               <div class="service-content">
                 <h2 class="s-title">Web Development</h2>
                 <p class="s-description text-center">
-                  I know Basics of Web Development which I learnt 
-                  Online. This includes basic html, css, javascript
-                  which I learnt it by making few websites.
+                  I have knowledge of basics of Web Development. 
+                  This includes HTML, CSS and javascript, 
+                  Which I got to learn by making websites
                 </p>
               </div>
             </div>
