Robotics_knowledge_commit

--- a/index.html
+++ b/index.html
@@ -207,9 +207,10 @@
               <div class="service-content">
                 <h2 class="s-title">Robotics</h2>
                 <p class="s-description text-center">
-                  I am good at Robotics. I am at an Intermidiate level of Robotics
-                  I know how to use sensors, How to control motors and drivers 
-                  and using controllers. I have also Made few IoT projects.
+                  I have intermidiate level knowledge of robotics. 
+                  I know how to operate devices like sensors and motors 
+                  using controllers. I am also working on IoT and 
+                  have developed few of its projects.
                 </p>
               </div>
             </div>
