--- a/Tinkethix/index.html
+++ b/Tinkethix/index.html
@@ -435,7 +435,7 @@
                                                 <!-- section txt start -->
                                                 <div class="txt">
                                                     <p>
-                                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text <a class="link-effect" href="#">ever since the 1500s</a>.
+                                                        We are extremely enthusiastic and determined when it comes to creation of new technologies and interfaces that provide meaningful and enjoyable experiences.  <a class="link-effect" href="#">We use our problem-solving capabilities to the fullest and always aim for a brighter future.</a>.
                                                     </p>
                                                 </div>
                                                 <!-- section txt end -->
@@ -482,7 +482,7 @@
                                                 <!-- section txt start -->
                                                 <div class="txt">
                                                     <p>
-                                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text <a class="link-effect" href="#">ever since the 1500s</a>.
+                                                        We aim to inculcate and foster  Technological and Tinkering skills into the young minds of tomorrow. <a class="link-effect" href="#">We are sincerely doing our part to  provide for a better future.</a>.
                                                     </p>
                                                 </div>
                                                 <!-- section txt end -->
