--- a/Tinkethix/index.html
+++ b/Tinkethix/index.html
@@ -482,7 +482,7 @@
                                                 <!-- section txt start -->
                                                 <div class="txt">
                                                     <p>
-                                                        We aim to inculcate and foster  Technological and Tinkering skills into the young minds of tomorrow. <a class="link-effect" href="#">We are sincerely doing our part to  provide for a better future.</a>.
+                                                        We aim to inculcate and foster  Technological and Tinkering skills into the young minds of tomorrow. <a class="link-effect" href="#">We are sincerely doing our part to  provide for a better future.</a>
                                                     </p>
                                                 </div>
                                                 <!-- section txt end -->
