--- a/Tinkethix/index.html
+++ b/Tinkethix/index.html
@@ -435,7 +435,7 @@
                                                 <!-- section txt start -->
                                                 <div class="txt">
                                                     <p>
-                                                        We aim to inculcate and foster  Technological and Tinkering skills<a class="link-effect" href="#">into the young minds of tomorrow</a>.
+                                                        We aim to inculcate and foster  Technological and Tinkering skills <a class="link-effect" href="#">into the young minds of tomorrow</a>.
                                                     </p>
                                                 </div>
                                                 <!-- section txt end -->
@@ -482,7 +482,7 @@
                                                 <!-- section txt start -->
                                                 <div class="txt">
                                                     <p>
-                                                        We aim to inculcate and foster  Technological and Tinkering skills into the young minds of tomorrow. <a class="link-effect" href="#">We are sincerely doing our part to  provide for a better future.</a>
+                                                        We aim to inculcate and foster  Technological and Tinkering skills into the young minds of tomorrow. We are sincerely doing our part to <a class="link-effect" href="#"> provide for a better future.</a>
                                                     </p>
                                                 </div>
                                                 <!-- section txt end -->
