main page back design commit

--- a/Tinkethix/index.html
+++ b/Tinkethix/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     
-<!-- Mirrored from www.11-76.com/themes/creativex/creativex/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Aug 2022 14:44:25 GMT -->
+
 <head>
+    <meta charset="utf-8">
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
         <meta charset="utf-8">
         <title>
             Tink Ethix - index
@@ -4008,5 +4012,5 @@
         <!-- scripts end -->
     </body>
 
-<!-- Mirrored from www.11-76.com/themes/creativex/creativex/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Aug 2022 14:44:25 GMT -->
+
 </html>
