main commit content

--- a/Tinkethix/index.html
+++ b/Tinkethix/index.html
@@ -301,7 +301,7 @@
                                     <div class="dot"></div>
                                     <!-- dot end -->
                                 </div>
-                                <div class="move-up-dot">Inspiring Generations</div>
+                                <div class="move-up-dot">TEAM TINK ETHIX</div>
                             </div>
                             <!-- section txt end -->
                             <!-- divider start -->
@@ -310,7 +310,7 @@
                             <!-- section txt start -->
                             <div class="txt">
                                 <p>
-                                    We use our problem-solving capabilities to the fullest and  <a class="link-effect" href="#">always aim for a brighter future</a>.
+                                    Tink Ethix is a advanced robotics team Of Seth Anandram jaipuria School with extended history of Atal Tinkering Lab. It provides a platform with huge exposure in the field to students and <a class="link-effect" href="#">aims at inculcating advanced engineering and automation skills</a>.
                                 </p>
                             </div>
                             <!-- section txt end -->
@@ -363,7 +363,7 @@
                                                         <div class="dot"></div>
                                                         <!-- dot end -->
                                                     </div>
-                                                    <div class="move-up-dot">Web design</div>
+                                                    <div class="move-up-dot">“ FIX THE CAUSE NOT THE SYMPTOM ”</div>
                                                 </div>
                                                 <!-- section txt end -->
                                                 <!-- divider start -->
@@ -372,7 +372,7 @@
                                                 <!-- section txt start -->
                                                 <div class="txt">
                                                     <p>
-                                                        We are extremely enthusiastic and determined when it comes to creation of new technologies and interfaces  <a class="link-effect" href="#">that provide meaningful and enjoyable experiences</a>.
+                                                        We use our problem-solving capabilities to the fullest and always <a class="link-effect" href="#">aim for a brighter future</a>.
                                                     </p>
                                                 </div>
                                                 <!-- section txt end -->
@@ -424,7 +424,7 @@
                                                         <div class="dot"></div>
                                                         <!-- dot end -->
                                                     </div>
-                                                    <div class="move-up-dot">UX/UI design</div>
+                                                    <div class="move-up-dot">“ KNOWLEDGE IS POWER ”</div>
                                                 </div>
                                                 <!-- section txt end -->
                                                 <!-- divider start -->
@@ -433,7 +433,7 @@
                                                 <!-- section txt start -->
                                                 <div class="txt">
                                                     <p>
-                                                        We aim to inculcate and foster  Technological and Tinkering skills <a class="link-effect" href="#">into the young minds of tomorrow</a>.
+                                                        We aim to inculcate and foster Technological and Tinkering <a class="link-effect" href="#">skills into the young minds of tomorrow</a>.
                                                     </p>
                                                 </div>
                                                 <!-- section txt end -->
@@ -471,7 +471,7 @@
                                                         <div class="dot"></div>
                                                         <!-- dot end -->
                                                     </div>
-                                                    <div class="move-up-dot">Brand identity</div>
+                                                    <div class="move-up-dot">“ TECHNOLOGY IS BEST WHEN IT BRINGS PEOPLE TOGETHER ”</div>
                                                 </div>
                                                 <!-- section txt end -->
                                                 <!-- divider start -->
@@ -480,7 +480,7 @@
                                                 <!-- section txt start -->
                                                 <div class="txt">
                                                     <p>
-                                                        We aim to inculcate and foster  Technological and Tinkering skills into the young minds of tomorrow. We are sincerely doing our part to <a class="link-effect" href="#"> provide for a better future.</a>
+                                                        We are extremely enthusiastic and determined when it comes to creation of new technologies and interfaces <a class="link-effect" href="#"> that provide meaningful and enjoyable experiences</a>.
                                                     </p>
                                                 </div>
                                                 <!-- section txt end -->
