--- a/Tinkethix/index.html
+++ b/Tinkethix/index.html
@@ -163,7 +163,7 @@
                                 <a class="ion-social-facebook" href="#"><span>Facebook</span></a>
                             </li>
                             <li>
-                                <a class="ion-social-instagram" href="#"><span>Instagram</span></a>
+                                <a class="ion-social-instagram" href="https://www.instagram.com/atl_sajs/"><span>Instagram</span></a>
                             </li>
                         </ul>
                     </div>
