--- a/Tinkethix/index.html
+++ b/Tinkethix/index.html
@@ -68,6 +68,9 @@
                                 <a class="navigation-state" href="./about.html" target="_blank">About</a>                            
                             </li>
                             <li>
+                                <a class="navigation-state" href="./achievements.html" target="_blank">Achievements</a>                            
+                            </li>
+                            <li>
                                 <a class="navigation-state" href="./contact.html" target="_blank">Contact</a>                            
                             </li>
                         </ul>
