--- a/Tinkethix/achievements.html
+++ b/Tinkethix/achievements.html
@@ -57,7 +57,7 @@
                     <!-- divider end -->
                     <!-- section title start -->
                     <h1 class="section-header-news">
-                        Read <span>our blog</span>
+                        Read <span>Achievements</span>
                     </h1>
                     <!-- section title end -->
                     <!-- divider start -->
