pic change commit

--- a/Tinkethix/index.html
+++ b/Tinkethix/index.html
@@ -1026,7 +1026,7 @@
                             <!-- section txt start -->
                             <div class="txt">
                                 <p>
-                                    ex Inc. Touchdown Dr 1176
+                                    Block B, Sector 14, Vasundhara, Ghaziabad, Uttar Pradesh 201012
                                 </p>
                             </div>
                             <!-- section txt end -->
@@ -1080,7 +1080,7 @@
                             <!-- section txt start -->
                             <div class="txt">
                                 <p>
-                                    <a class="link-effect" href="mailto:contact@domainname.com">contact@domainname.com</a>
+                                    <a class="link-effect" href="mailto:contact@domainname.com">atl@sajs.co.in</a>
                                 </p>
                             </div>
                             <!-- section txt end -->
