Member-Image updation Commit

--- a/Tinkethix/index.html
+++ b/Tinkethix/index.html
@@ -723,11 +723,11 @@
                                                     <div class="image-works">
                                                         <div class="hover-effect"></div>
                                                         <div class="icon-works">
-                                                            <a class="popup-photo" href="img/team/3.jpg" title="IMG Description">
+                                                            <a class="popup-photo" href="img/khushi_img.jpg" title="IMG Description">
                                                             <i class="iw-slide ion-plus"></i>
                                                             </a>
                                                         </div>
-                                                        <img alt="Img" src="img/team/3.jpg">
+                                                        <img alt="Img" src="img/khushi_img.jpg">
                                                     </div>
                                                 </div>
                                             </div>
@@ -742,14 +742,14 @@
                                             <div class="divider-xs"></div>
                                             <!-- divider end -->
                                             <!-- section title start -->
-                                            <a class="popup-photo" href="img/team/3.jpg">
+                                            <a class="popup-photo" href="img/khushi_img.jpg">
                                                 <div class="section-title-inner">
-                                                    R. Redford
+                                                    Khushi Chada
                                                 </div>
                                                 <!-- section title end -->
                                                 <!-- section title start -->
                                                 <div class="section-title-inner section-title-inner-dark">
-                                                    Advertising Photographer
+                                                    Documentation Head
                                                 </div>
                                             </a>
                                             <!-- section title end -->
