img-descreption commit

--- a/Tinkethix/index.html
+++ b/Tinkethix/index.html
@@ -599,7 +599,7 @@
                                                     <div class="image-works">
                                                         <div class="hover-effect"></div>
                                                         <div class="icon-works">
-                                                            <a class="popup-photo" href="./img/Aryansh_img.png" title="IMG Description">
+                                                            <a class="popup-photo" href="./img/Aryansh_img.png" title="Developer, Designer">
                                                             <i class="iw-slide ion-plus"></i>
                                                             </a>
                                                         </div>
@@ -661,7 +661,7 @@
                                                     <div class="image-works">
                                                         <div class="hover-effect"></div>
                                                         <div class="icon-works">
-                                                            <a class="popup-photo" href="img/Ishan_img.jpeg" title="IMG Description">
+                                                            <a class="popup-photo" href="img/Ishan_img.jpeg" title="Techie, Developer">
                                                             <i class="iw-slide ion-plus"></i>
                                                             </a>
                                                         </div>
@@ -680,7 +680,7 @@
                                             <div class="divider-xs"></div>
                                             <!-- divider end -->
                                             <!-- section title start -->
-                                            <a class="popup-photo" href="img/team/2.jpg">
+                                            <a class="popup-photo" href="img/Ishan_img.jpeg">
                                                 <div class="section-title-inner">
                                                     Ishan Srivastava
                                                 </div>
