--- a/Tinkethix/achievements.html
+++ b/Tinkethix/achievements.html
@@ -21,69 +21,42 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900%7COswald:300,400,700" rel="stylesheet" type="text/css">
         <!-- google fonts end -->
     </head> 
-<!-- page blog entries start -->
-<div class="lower-page bg-dark" id="page-blog-entries">
-    <!-- container start -->
-    <div class="container-fluid nopadding">
-        <!-- extra margin start -->
-        <div class="extra-margin-container">
-            <!-- dots start -->
-            <div class="dots">
-                <div class="the-dots"></div>
-            </div>
-            <div class="dots-reverse">
-                <div class="the-dots"></div>
-            </div>
-            <!-- dots end -->
-            <!-- divider start -->
-            <div class="divider-xl"></div>
-            <!-- divider end -->
-            <!-- row start -->
-            <div class="row">
-                <!-- col start -->
-                <div class="col-lg-12">
-                    <!-- section txt start -->
-                    <div class="section-heading section-heading-dot section-heading-center-true">
-                        <div class="section-heading-span">
-                            <!-- dot start -->
-                            <div class="dot"></div>
-                            <!-- dot end -->
-                        </div>
-                        <div class="move-up-dot">Stay in the know</div>
-                    </div>
-                    <!-- section txt end -->
-                    <!-- divider start -->
-                    <div class="divider-l"></div>
-                    <!-- divider end -->
-                    <!-- section title start -->
-                    <h1 class="section-header-news">
-                        Read <span>Achievements</span>
-                    </h1>
-                    <!-- section title end -->
-                    <!-- divider start -->
-                    <div class="divider-l"></div>
-                    <!-- divider end -->
-                    <!-- button start -->
-                    <div class="more-wraper-center">
-                        <a class="more-button-wrapper" href="blog.html">
-                            <div class="more-button-bg-center more-button-bg-center-color-rev more-button-circle"></div>
-                            <div class="more-button-txt-center more-button-txt-center-color-rev">
-                                <span>All entries</span>
-                            </div>
-                        </a>
-                    </div>
-                    <!-- button end -->
-                </div>
-                <!-- col end -->
-            </div>
-            <!-- row end -->
-            <!-- divider start -->
-            <div class="divider-xl"></div>
-            <!-- divider end -->
+    <div class="container">
+        <div class="timeline">
+          <ul>
+            <li>
+              <div class="timeline-content">
+                <h3 class="date">20th may, 2010</h3>
+                <h1>Heading 1</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-content">
+                <h3 class="date">20th may, 2010</h3>
+                <h1>Heading 2</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-content">
+                <h3 class="date">20th may, 2010</h3>
+                <h1>Heading 3</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-content">
+                <h3 class="date">20th may, 2010</h3>
+                <h1>Heading 4</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+              </div>
+            </li>
+          </ul>
         </div>
-        <!-- extra margin end -->
-    </div>
-    <!-- container end -->
-</div>
-<!-- page blog entries end -->
+      </div>
+       <!-- scripts start -->
+       <script src="./plugins.js"></script> 
+       <script src="./creativex.js"></script>
+       <!-- scripts end -->
 </html>
