--- a/Tinkethix/achievements.html
+++ b/Tinkethix/achievements.html
@@ -26,30 +26,30 @@
           <ul>
             <li>
               <div class="timeline-content">
-                <h3 class="date">20th may, 2010</h3>
-                <h1>Heading 1</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                <h3 class="date">2017</h3>
+                <h1>ATL opening</h1>
+                <p></p>
               </div>
             </li>
             <li>
               <div class="timeline-content">
                 <h3 class="date">20th may, 2010</h3>
-                <h1>Heading 2</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                <h1>Maker fair Hyderabad</h1>
+                <p></p>
               </div>
             </li>
             <li>
               <div class="timeline-content">
                 <h3 class="date">20th may, 2010</h3>
-                <h1>Heading 3</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                <h1>Atl Marathon Russia</h1>
+                <p></p>
               </div>
             </li>
             <li>
               <div class="timeline-content">
                 <h3 class="date">20th may, 2010</h3>
-                <h1>Heading 4</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                <h1>Starternity Hacks 2.0</h1>
+                <p></p>
               </div>
             </li>
           </ul>
