FB,INSTA COMMIT

--- a/Tinkethix/index.html
+++ b/Tinkethix/index.html
@@ -161,12 +161,13 @@
                 <div class="center-block">
                     <!-- social icons start -->
                     <div class="social-icons">
-                        <ul>
+                        <ul><!--
                             <li>
                                 <a class="ion-social-twitter" href="#"><span>Twitter</span></a>
                             </li>
+                            -->
                             <li>
-                                <a class="ion-social-facebook" href="#"><span>Facebook</span></a>
+                                <a class="ion-social-facebook" href="https://www.facebook.com/atl.sajs/"><span>Facebook</span></a>
                             </li>
                             <li>
                                 <a class="ion-social-instagram" href="https://www.instagram.com/atl_sajs/"><span>Instagram</span></a>
