new page commit

--- a/Tinkethix/index.html
+++ b/Tinkethix/index.html
@@ -167,10 +167,10 @@
                             </li>
                             -->
                             <li>
-                                <a class="ion-social-facebook" href="https://www.facebook.com/atl.sajs/"><span>Facebook</span></a>
+                                <a class="ion-social-facebook" href="https://www.facebook.com/atl.sajs/" target="_blank"><span>Facebook</span></a>
                             </li>
                             <li>
-                                <a class="ion-social-instagram" href="https://www.instagram.com/atl_sajs/"><span>Instagram</span></a>
+                                <a class="ion-social-instagram" href="https://www.instagram.com/atl_sajs/" target="_blank"><span>Instagram</span></a>
                             </li>
                         </ul>
                     </div>
